# subconverter-rs

./: .cursorignore  .cursorrules  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README-zh.md  README.md  WASM.md  build-wasm.sh
.cargo/: config.toml
.cursor/rules/: rust.rules
.github/workflows/: auto-patch-release.yml  publish-wasm.yml  release.yml  update-vercel.yml  wasm-release.yml
base/: myconfig.toml
base/_SubConfig/: extra_servers.txt
docs/: github-actions-setup.md
examples/: README.md  add_nodes_example.rs  ini_reader_example.rs  load_ruleset.rs  node_manip_example.rs  proxy_model_example.rs  url_parser_example.rs
examples/subconverter/: README.md  clash_base.yml  config.ini  main.rs  output.yml
examples/subconverter/rules/: China.list  GoogleCN.list  LocalAreaNetwork.list  SteamCN.list
js/: kv_bindings.js
scripts/: build-wasm.sh
src/: lib.rs  main.rs  settings.rs
src/api/: admin.rs  init.rs  mod.rs  rules.rs  short_urls.rs  sub.rs
src/constants/: log_level.rs
src/generator/: mod.rs  node_manip.rs
src/generator/config/: group.rs  (+6 more)
src/handler/: interfaces.rs
src/interfaces/: mod.rs  subconverter.rs
src/models/: app_state.rs  builder.rs  configs.rs  cron.rs  extra_settings.rs  mod.rs  proxy.rs  proxy_group_config.rs  regex_match_config.rs  ruleset.rs  subconverter_target.rs
src/parser/: infoparser.rs  mod.rs  node_manip.rs  parse_settings.rs  ruleset.rs  settings.rs  subparser.rs  types.rs
src/rulesets/: ruleset.rs
src/settings/: config.rs  deserializer.rs  external.rs  import.rs  import_toml.rs  ini_bindings.rs  mod.rs  ruleset.rs  toml_deserializer.rs  unified.rs  yaml_deserializer.rs
src/template/: mod.rs  template_renderer.rs
src/utils/: base64.rs  file.rs  file_std.rs  file_wasm.rs  http.rs  http_std.rs  http_wasm.rs  ini.rs  ini_reader.rs  matcher.rs  memory_cache.rs  mod.rs  network.rs  node_manip.rs  string.rs  system.rs  tribool.rs  url.rs  useragent.rs  yaml.rs
src/vfs/: mod.rs  vercel_kv_directory.rs  vercel_kv_github.rs  vercel_kv_github_loader.rs  vercel_kv_helpers.rs  vercel_kv_js_bindings.rs  vercel_kv_operations.rs  vercel_kv_store.rs  vercel_kv_types.rs  vercel_kv_vfs.rs
src/web_handlers/: interfaces.rs  web_api.rs
tests/: lib.rs  settings_current_mixed_tests.rs  settings_emoji_rename_tests.rs  settings_proxy_tests.rs  settings_ruleset_tests.rs  settings_server_cache_tests.rs  settings_url_advanced_tests.rs  useragent_tests.rs
vercel/: README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
vercel-api-test/: .gitignore  next.config.js  package.json  pnpm-lock.yaml  vercel.json
vercel-api-test/api/: test.ts
vercel-api-test/components/: FileExplorer.tsx
vercel-api-test/lib/: api-client.ts  enhanced-wasm-loader.js  enhanced-wasm-loader.ts
vercel-api-test/pages/: index.tsx
vercel/.next/: trace
wasm-test/src/: App.tsx
www/: netlify.toml  next.config.ts  package.json  pnpm-lock.yaml  vercel.json  wasm-loader.ts
www/messages/: en.json  zh.json
(+137 files in other folders)
