[package]
name = "subconverter-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
configparser = "3.1.0"
lazy_static = "1.5.0"
log = "0.4.21"
regex = "1.10.4"
reqwest = { version = "0.12.12", features = ["json", "blocking", "gzip", "brotli"] }
rquickjs = "0.8.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.135"
serde_yaml = "0.9.33"
toml = "0.8.14"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
urlencoding = "2.1.3"
linked-hash-map = "0.5.6"
uuid = "1.6"

[[example]]
name = "node_manip_example"
path = "examples/node_manip_example.rs"

[[example]]
name = "proxy_model_example"
path = "examples/proxy_model_example.rs"

[[example]]
name = "ini_reader_example"
path = "examples/ini_reader_example.rs"

