[package]
name = "subconverter"
version = "0.1.0"
edition = "2021"

[features]
default = []
js_runtime = []

[[example]]
name = "subconverter"
path = "examples/subconverter/main.rs"

[dependencies]
base64 = "0.22.1"
configparser = "3.1.0"
lazy_static = "1.5.0"
log = "0.4.21"
regex = "1.10.4"
reqwest = { version = "0.12.12", features = ["json", "blocking", "gzip", "brotli"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.135"
toml = "0.8.14"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
urlencoding = "2.1.3"
linked-hash-map = "0.5.6"
uuid = "1.6"
actix-web = "4.10.2"
once_cell = "1.21.1"
env_logger = "0.10.2"
serde_ini = "0.2.0"
serde_yaml = "0.9.34"

[dev-dependencies]
tempfile = "3.10.1"
