[package]
name = "subconverter"
version = "0.1.0"
edition = "2021"
description = "A more powerful utility to convert between proxy subscription format"
license = "GPL-3.0+"

[features]
default = []
js_runtime = ["quickjs"]
vendored-openssl = ["openssl/vendored"]

[[example]]
name = "subconverter-example1"
path = "examples/subconverter/main.rs"

[dependencies]
base64 = "0.22.1"
configparser = "3.1.0"
lazy_static = "1.5.0"
log = "0.4.21"
regex = "1.10.4"
reqwest = { version = "0.12.12", features = ["json", "blocking", "gzip", "brotli", "rustls-tls"], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.135"
toml = "0.8.14"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
urlencoding = "2.1.3"
linked-hash-map = "0.5.6"
uuid = "1.6"
actix-web = "4.10.2"
once_cell = "1.21.1"
env_logger = "0.11.8"
serde_ini = "0.2.0"
serde_yaml = "0.9.34"
quickjs = { version = "0.1.0", optional = true }
md-5 = "0.10.6"
clap = { version = "4.5.35", features = ["derive"] }
openssl = { version = "0.10", optional = true }

[dev-dependencies]
tempfile = "3.10.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winreg", "winerror", "minwindef"] }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = "symbols"